# Doctor-patient-dialogue-crewai

./: .env  .gitignore  FIXES_SUMMARY.md  README.md  instruction.md  preview_followups_case_out.txt  preview_followups_out.txt  pyproject.toml  report.md
app/: consultation_store.py  followup_runtime.py  streamlit_app.py
app/app/: followup_agent.py  patient_memory.py
data/processed/: handcrafted_outputs.json  train_outputs.json
data/raw/: handcrafted_dialogues.json
knowledge/: clinical_note_template.md  disclaimer.txt  safety_rules.md  section_definitions.yaml  soap_structure.yaml  user_preference.txt
retrieval/: loader.py  objective_retriever.py  plan_retriever.py  subjective_retriever.py
scripts/: convert_aci_to_dialogue.py  preview_followups.py  preview_followups_case.py  preview_followups_multi.py  run_dataset.py  run_single_case.py  simulate_followup_sequence.py  smoke_check_dialogue_filter.py  smoke_followups.py  test_json_normalization.py
src/doctor_patient_dialogue/: crew.py  main.py
src/doctor_patient_dialogue/config/: agents.yaml  tasks.yaml
src/doctor_patient_dialogue/tools/: __init__.py  custom_tool.py  dialogue_parser.py  dialogue_validator.py  history_subjective_tool.py  llm_fallback_plan_tool.py  objective_tool.py  subjective_tool.py
