[project]
name = "doctor_patient_dialogue"
version = "0.1.0"
description = "doctor_patient_dialogue using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "backoff>=2.2.1",
    "crewai[tools]==1.7.2",
    "email-validator>=2.0.0",
    "fastapi>=0.127.0",
    "litellm>=1.75.3",
    "orjson>=3.11.5",
    "apscheduler>=3.11.0",
    "streamlit>=1.30.0",
]

[project.scripts]
doctor_patient_dialogue = "doctor_patient_dialogue.main:run"
run_crew = "doctor_patient_dialogue.main:run"
train = "doctor_patient_dialogue.main:train"
replay = "doctor_patient_dialogue.main:replay"
test = "doctor_patient_dialogue.main:test"
run_with_trigger = "doctor_patient_dialogue.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
